@@ -1,5 +1,5 @@
 jags.pfit <-
-function(cl, data, params, model, inits, n.chains = 3, load.balancing = TRUE, ...)
+function(cl, data, params, model, inits, n.chains = 3, ...)
 {
     ## eval args
     if (n.chains == 1)
@@ -20,7 +20,8 @@ function(cl, data, params, model, inits, n.chains = 3, load.balancing = TRUE, ..
     ## common data
     cldata <- list(data=data, params=params, model=model, inits=inits)
     ## parallel computations
-    mcmc <- mcmc.cluster(cl, 1:n.chains, jagsparallel, cldata, lib="dclone", load.balancing=load.balancing, ...)
+    mcmc <- mcmc.cluster(cl, 1:n.chains, jagsparallel, cldata, lib="dclone", 
+        load.balancing=getOption("dclone.cluster")$load.balancing, ...)
     ## binding the chains
     res <- as.mcmc.list(lapply(mcmc, as.mcmc))
     ## attaching attribs and return
