@@ -7,6 +7,7 @@ Version 1.0-2, December 4, 2009
       RNG seed argument (for parallel computations).
     * dc.pfit: models with different n.clones are run parallel
       with load balancing as default.
+    * options got cluster (incl. load.balancing).
 
 Version 1.0-1, November 19, 2009
     * custommodel function added, fitting functions modified.
